--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/UniversityDemo/v16/Server/sqlite3/db.lock
+/bin
+/obj
+bin/
+obj/
