--- a/appsettings.json
+++ b/appsettings.json
@@ -13,8 +13,8 @@
   },
   "JWTSettings": {
     "SecretKey": "jwts-are-awesome",
-    "Issuer": "UniversityDemo",
-    "Audience": "UniversityDemo"
+    "Issuer": "https://localhost:44341/",
+    "Audience": "https://localhost:44341/"
   },
   "CosmosDb": {
     "Account": "https://localhost:8081",
