--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=HOAN; Database=HoanDemo; Trusted_Connection=True; MultipleActiveResultSets=true"
-    //"DefaultConnection": "Server=HOANPC\\SQLEXPRESS; Database=HoanDemo; Trusted_Connection=True; MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=HOAN; Database=HoanDemo; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=HOANPC\\SQLEXPRESS; Database=HoanDemo; Trusted_Connection=True; MultipleActiveResultSets=true"
   },
   "JWTSettings": {
     "SecretKey": "jwts-are-awesome",
