--- a/UniversityDemo.csproj
+++ b/UniversityDemo.csproj
@@ -1,19 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>c7f7df45-99f9-462a-9dfc-42d863ee5dc2</UserSecretsId>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netcoreapp3.1\UniversityDemo.xml</DocumentationFile>
     <OutputPath>bin\Debug\netcoreapp3.1\</OutputPath>
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="Migrations\20200629101549_addStudent.cs" />
     <Compile Remove="Migrations\20200629101549_addStudent.Designer.cs" />
@@ -36,7 +34,6 @@
     <Compile Remove="Migrations\20200718025853_aaaa.cs" />
     <Compile Remove="Migrations\20200718025853_aaaa.Designer.cs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="JWT" Version="3.0.0-beta4" />
@@ -61,6 +58,4 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
-
-
 </Project>
