add university data

--- a/UniversityDemo.csproj
+++ b/UniversityDemo.csproj
@@ -58,4 +58,7 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="UniversityDemo.Data\UniversityDemo.Data.csproj" />
+  </ItemGroup>
 </Project>
